// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a MultiMediaDropzone 1`] = `
<div
  aria-disabled="false"
  class="dropzone"
  style="position:relative"
>
  <div />
  <input
    autocomplete="off"
    multiple=""
    style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
    type="file"
  />
</div>
`;

exports[`Render a MultiMediaDropzone while media is uploaded 1`] = `
<div
  aria-disabled="false"
  class="dropzone"
  style="position:relative"
>
  <div
    class="dropzoneOverlay"
  >
    <div
      class="dropArea"
    >
      <div
        class="uploadInfoContainer"
      >
        <div
          class="uploadInfo"
          role="button"
          tabindex="0"
        >
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <h3
            class="uploadInfoHeadline"
          >
            Upload files by dropping them here
          </h3>
          <div
            class="uploadInfoSubline"
          >
            or click here to upload
          </div>
        </div>
      </div>
      <ul
        class="mediaItems"
      >
        <li>
          <div
            class="mediaItem"
          >
            <img />
          </div>
        </li>
        <li>
          <div
            class="mediaItem"
          >
            <img />
          </div>
        </li>
      </ul>
    </div>
  </div>
  <div />
  <input
    autocomplete="off"
    multiple=""
    style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
    type="file"
  />
</div>
`;

exports[`Render a MultiMediaDropzone while the overlay is visible 1`] = `
<div
  aria-disabled="false"
  class="dropzone"
  style="position:relative"
>
  <div
    class="dropzoneOverlay"
  >
    <div
      class="dropArea"
    >
      <div
        class="uploadInfoContainer"
      >
        <div
          class="uploadInfo"
          role="button"
          tabindex="0"
        >
          <span
            aria-label="fa-cloud-upload"
            class="uploadIcon fa fa-cloud-upload"
          />
          <h3
            class="uploadInfoHeadline"
          >
            Upload files by dropping them here
          </h3>
          <div
            class="uploadInfoSubline"
          >
            or click here to upload
          </div>
        </div>
      </div>
      <ul
        class="mediaItems"
      />
    </div>
  </div>
  <div />
  <input
    autocomplete="off"
    multiple=""
    style="position:absolute;top:0;right:0;bottom:0;left:0;opacity:0.00001;pointer-events:none"
    type="file"
  />
</div>
`;
